Fixed some UI from upgraded bootstrap and flushed out dialog modal for switching camera on mobile.

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -42,18 +42,23 @@ body,
 }
 
 #navbar {
+	visibility: hidden;
 	background-color: rgba(0, 0, 0, 0.5);
 	padding: 4px;
-    width: min-content;
-	visibility: hidden;
 	border-radius: 20px;
 	font-size: 1rem;
+  	width: min-content;
+  	position: fixed;
+  	top: 0;
+  	right: 0;
+  	left: 0;
 }
 
 .btn {
 	width: -webkit-fill-available;
 	padding: .5rem .5rem;
 	font-size: 1.1rem;
+  	border: none;
 }
 
 .my-handle {
